Fix: インフラストラクチャの画面をちょっと動かした

--- a/app/views/infrastructures/_security_groups_table.html.erb
+++ b/app/views/infrastructures/_security_groups_table.html.erb
@@ -25,214 +25,13 @@
       </thead>
       <!--Contents-->
       <tbody>
-      <template v-for="rule in rules_summary" track-by="$index">
-        <tr>
-          <th v-if="rule.ip_permissions.length > rule.ip_permissions_egress.length" style="width: 20%" :rowspan="rule.ip_permissions.length +1">{{rule.description}}</th>
-          <th v-else :rowspan="rule.ip_permissions_egress.length +1">{{rule.description}}</th>
-          <th v-if="rule.ip_permissions.length > rule.ip_permissions_egress.length" :rowspan="rule.ip_permissions.length+1">{{rule.group_id}}</th>
-          <th v-else :rowspan="rule.ip_permissions_egress.length+1">{{rule.group_id}}</th>
+        <tr v-for="record in table_data">
+          <template v-for="column in record">
+            <th v-if="column.th" style="width: 20%" :rowspan="column.row">{{column.text}}</th>
+            <% #プロトコルとポート範囲で文字列と数値があるのであえて==にしています %>
+            <td v-else :rowspan="column.row">{{column.text == "-1" ? "All" : column.text}}</td>
+          </template>
         </tr>
-
-        <!--If inbound contents is greater than outbound contents, inbounr>will be the base loop-->
-        <template v-if="rule.ip_permissions.length > rule.ip_permissions_egress.length">
-          <template v-for="(index, inbound) in rule.ip_permissions">
-            <template v-if="index == 0">
-              <!--First inbound-->
-              <tr>
-                <td>{{inbound.prefix_list_ids}}</td>
-                <td>{{inbound.ip_protocol}}</td>
-                <td v-if="inbound.from_port === inbound.to_port">{{inbound.from_port}}</td>
-                <td v-else>{{inbound.from_port}}-{{inbound.to_port}}</td>
-                <!--Source IP-->
-                <td v-for="s in inbound.ip_ranges">{{s.cidr_ip}}</td>
-                <td v-for="s in inbound.user_id_group_pairs">{{s.cidr_ip}}</td>
-                <!--First Outbound-->
-                <template v-for="outbound in rule.ip_permissions_egress" track-by="$index">
-                  <td v-if="$index == 0">{{outbound.prefix_list_ids}}</td>
-                  <td v-if="$index == 0">
-                    <span v-if="outbound.ip_protocol === '-1'">
-                      All
-                    </span>
-                    <span v-else>
-                      {{outbound.ip_protocol}}
-                    </span>
-                  </td>
-                  <td v-if="$index == 0">
-                    <span v-if="outbound.from_port === outbound.to_port">
-                      <span v-if="!outbound.from_port">
-                        All
-                      </span>
-                      <span v-else>
-                        {{outbound.from_port}}
-                      </span>
-                    </span>
-                    <span v-else>
-                    {{outbound.from_port}}-{{outbound.to_port}}
-                    </span>
-                  </td>
-                  <td v-if="$index == 0">
-                    <span v-if="check_length(outbound.ip_ranges[0].cidr_ip)">{{outbound.ip_ranges[0].cidr_ip}}</span>
-                    <span v-if="check_length(outbound.user_id_group_pairs)">{{outbound.user_id_group_pairs[0].group_id}}</span>
-                  </td>
-                </template>
-              </tr>
-            </template>
-            <template v-else>
-              <!--next inbound-->
-              <tr>
-                <td>{{inbound.prefix_list_ids}}</td>
-                <td>{{inbound.ip_protocol}}</td>
-                <td v-if="inbound.from_port === inbound.to_port">
-                      <span v-if="inbound.from_port === -1">
-                        All
-                      </span>
-                      <span v-else>
-                        {{inbound.from_port}}
-                      </span>
-                </td>
-                <td v-else>{{inbound.from_port}}-{{inbound.to_port}}</td>
-                <!--Source IP-->
-                <td v-for="s in inbound.ip_ranges">
-                  {{s.cidr_ip}}
-                </td>
-                <td v-for="u in inbound.user_id_group_pairs">
-                  {{u.group_id}}
-                </td>
-                <!--First Outbound-->
-                <template v-if="index < rule.ip_permissions_egress.length">
-                  <td v-cloak="index === 0">{{rule.ip_permissions_egress[index].prefix_list_ids}}</td>
-                  <td v-cloak="index === 0">
-                      <span v-if="rule.ip_permissions_egress[index].ip_protocol === '-1'">
-                        All
-                      </span>
-                      <span v-else>
-                        {{rule.ip_permissions_egress[index].ip_protocol}}
-                      </span>
-                  </td>
-                  <td v-cloak="index === 0">
-                      <span v-if="rule.ip_permissions_egress[index].from_port === rule.ip_permissions_egress[index].to_port">
-                        <span v-if="rule.ip_permissions_egress[index].from_port">
-                          {{rule.ip_permissions_egress[index].from_port}}
-                        </span><span v-else>All</span>
-                      </span>
-                      <span v-else>
-                        {{rule.ip_permissions_egress[index].from_port}}-{{rule.ip_permissions_egress[index].to_port}}
-                      </span>
-                  </td>
-                  <td v-cloak="index === 0">
-                    <span v-if="check_length(rule.ip_permissions_egress[index].ip_ranges)">{{rule.ip_permissions_egress[index].ip_ranges[0].cidr_ip}}</span>
-                    <span v-if="check_length(rule.ip_permissions_egress[index].user_id_group_pairs)">{{rule.ip_permissions_egress[index].user_id_group_pairs[0].group_id}}</span>
-                  </td>
-                </template>
-              </tr>
-            </template>
-          </template>
-        </template>
-
-        <!--If outbound contents is greater than inbound contents, outbound will be the base loop-->
-        <template v-else>
-          <template v-for="(index, outbound) in rule.ip_permissions_egress">
-            <template v-if="index == 0">
-              <!--First outbound-->
-              <tr>
-                <!--First Outbound-->
-                <template v-for="inbound in rule.ip_permissions" track-by="$index">
-                  <td v-if="$index == 0">{{inbound.prefix_list_ids}}</td>
-                  <td v-if="$index == 0">{{inbound.ip_protocol}}</td>
-                  <td v-if="$index == 0">
-                      <span v-if="inbound.from_port === inbound.to_port">
-                        <span v-if="inbound.from_port === -1">
-                          All
-                        </span>
-                        <span>
-                          {{inbound.from_port}}
-                        </span>
-                      </span>
-                      <span v-else>
-                        {{inbound.from_port}}-{{inbound.to_port}}
-                      </span>
-                  </td>
-                  <td v-if="$index == 0">
-                    <span v-if="check_length(inbound.ip_ranges[0].cidr_ip)">{{inbound.ip_ranges[0].cidr_ip}}</span>
-                    <span v-if="check_length(inbound.user_id_group_pairs)">{{inbound.user_id_group_pairs[0].group_id}}</span>
-                  </td>
-                </template>
-                <template v-if="rule.ip_permissions.length <= 0">
-                  <td>-</td><td>-</td><td>-</td><td>-</td>
-                </template>
-                <td>{{outbound.prefix_list_ids}}</td>
-                <td>
-                    <span v-if="outbound.ip_protocol === '-1'">
-                      All
-                    </span>
-                    <span v-else>
-                      {{outbound.ip_protocol}}
-                    </span>
-                </td>
-                <td v-if="outbound.from_port === outbound.to_port">
-                    <span v-if="!outbound.from_port">
-                        All
-                      </span>
-                      <span v-else>
-                        {{outbound.from_port}}
-                      </span>
-                </td>
-                <td v-else>{{outbound.from_port}}-{{outbound.to_port}}</td>
-                <!--Source IP-->
-                <td v-for="s in outbound.ip_ranges">{{s.cidr_ip}}</td>
-                <td v-for="s in outbound.user_id_group_pairs">{{s.group_id}}</td>
-              </tr>
-            </template>
-
-            <template v-else>
-              <!--next inbound-->
-              <tr>
-                <template v-if="index < rule.ip_permissions.length">
-                  <td v-cloak="index === 0">{{rule.ip_permissions[index].prefix_list_ids}}</td>
-                  <td v-cloak="index === 0">{{rule.ip_permissions[index].ip_protocol}}</td>
-                  <td v-cloak="index === 0">
-                      <span v-if="rule.ip_permissions[index].from_port === rule.ip_permissions[index].to_port">
-                        {{rule.ip_permissions[index].from_port}}
-                      </span>
-                  </td>
-                  <td v-cloak="index === 0">
-                    <span v-if="check_length(rule.ip_permissions[index].ip_ranges)">{{rule.ip_permissions[index].ip_ranges[0].cidr_ip}}</span>
-                    <span v-if="check_length(rule.ip_permissions[index].user_id_group_pairs)">{{rule.ip_permissions[index].user_id_group_pairs[0].group_id}}</span>
-                  </td>
-                </template>
-                <template v-else>
-                  <td>-</td><td>-</td><td>-</td><td>-</td>
-                </template>
-                <td>{{outbound.prefix_list_ids}}</td>
-                <td>
-                    <span v-if="outbound.ip_protocol === '-1'">
-                      All
-                    </span>
-                    <span v-else>
-                      {{outbound.ip_protocol}}
-                    </span>
-                </td>
-                <td v-if="outbound.from_port === outbound.to_port">
-                    <span v-if="!outbound.from_port">
-                        All
-                      </span>
-                      <span v-else>
-                        {{outbound.from_port}}
-                      </span>
-                </td>
-                <td v-else>{{outbound.from_port}}-{{outbound.to_port}}</td>
-                <!--Source IP-->
-                <td v-for="s in outbound.ip_ranges">{{s.cidr_ip}}</td>
-                <td v-for="s in outbound.user_id_group_pairs">{{s.group_id}}</td>
-                <!--First Outbound-->
-              </tr>
-            </template>
-
-          </template>
-        </template>
-
-      </template>
-
       </tbody>
     </table>
   </div>
