--- a/app/views/monitorings/_modal_trigger_setting_description.html.erb
+++ b/app/views/monitorings/_modal_trigger_setting_description.html.erb
@@ -1,5 +1,5 @@
 <!-- modal for trigger setting -->
-<div id="trigger-warning" class="modal fade",  tabindex="-1" role="dialog" aria-hidden="true">
+<div id="trigger-warning" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
