Fix: インフラストラクチャの画面をちょっと動かした

--- a/app/views/infrastructures/index.html.erb
+++ b/app/views/infrastructures/index.html.erb
@@ -74,6 +74,7 @@
     :filter-key="searchQuery"
     :picked="picked"
     :index="index"
+    ref="demogrid"
     :url="url">
     </demo-grid>
     <div v-if="is_empty" v-cloak>
