--- a/app/views/project_parameters/show.html.erb
+++ b/app/views/project_parameters/show.html.erb
@@ -26,7 +26,7 @@
 
     <tbody>
       <template v-for="p in params">
-        <param-tr :param.sync="p"></param-tr>
+        <param-tr :param="p"></param-tr>
       </template>
     </tbody>
   </table>
