--- a/app/views/infrastructures/modal/_modal_change_rules.html.erb
+++ b/app/views/infrastructures/modal/_modal_change_rules.html.erb
@@ -42,7 +42,7 @@
         <nav v-if="filterKey === ''">
           <ul class="pager">
             <li :class="isStartPage ? 'disabled' : ''"><a @click="showPrev" ><span aria-hidden="true">&larr; <%= t 'monitoring.btn.prev' %></span></a></li>
-            <label><%= t 'monitoring.msg.page' %> </label><strong v-html="page + 1"></strong> <%= t 'monitoring.msg.of' %><span v-html="rules_summary.length / 10 | roundup"></span>
+            <label><%= t 'monitoring.msg.page' %> </label><strong v-html="page + 1"></strong> <%= t 'monitoring.msg.of' %><span v-html="roundup(rules_summary.length / 10)"></span>
             <li :class="isEndPage ? 'disabled' : ''"><a   @click="showNext" :disabled="!isEndPage"><%= t 'monitoring.btn.next' %> <span aria-hidden="true">&rarr;</span></a></li>
           </ul>
         </nav>
