--- a/app/views/vue/_cf_history_tabpane.html.erb
+++ b/app/views/vue/_cf_history_tabpane.html.erb
@@ -3,7 +3,7 @@
     <h4 class="page-header">History</h4>
     <div class="list-group">
       <a href="#" class="list-group-item" v-for="v in history" :class="{active: active(v.id)}" @click="get(v.id)">
-        <bootstrap-tooltip :title.once="v.detail">
+        <bootstrap-tooltip :title="v.detail">
           <template slot="content">
             <h4 class="list-group-item-heading">{{v.name}}</h4>
             <p class="list-group-item-text">{{toLocaleString(v.created_at)}}</p>
