--- a/app/views/vue/_edit_monitoring_tabpane.html.erb
+++ b/app/views/vue/_edit_monitoring_tabpane.html.erb
@@ -101,7 +101,7 @@
 
       <div class="list-group" v-if="display_zb_server">
         <a href="#" class="list-group-item" v-for="z in zabbix_servers" :class="{active: z.is_checked}" @click="select_server(z)">
-          <bootstrap-tooltip :title.once="'<%= t 'monitoring.click_to_select' %>'">
+          <bootstrap-tooltip :title="'<%= t 'monitoring.click_to_select' %>'">
             <template slot="content">
               <h4 class="list-group-item-heading">{{z.fqdn}}</h4>
               <small>{{z.details}}</small>
