--- a/app/views/vue/_operation_sched_tabpane.html.erb
+++ b/app/views/vue/_operation_sched_tabpane.html.erb
@@ -39,7 +39,7 @@
           <a @click="showPrev()"><span aria-hidden="true">&larr;</span> <%= t 'monitoring.btn.prev' %></a></li>
         <label><%= t 'monitoring.msg.page' %>:
           &nbsp </label><strong v-html="pageNumber + 1"></strong> <%= t 'monitoring.msg.of' %>
-        &nbsp<span v-html="data.length / pages  | roundup"></span>
+        &nbsp<span v-html="roundup(data.length / pages)"></span>
         <li :class="{disabled: isEndPage}">
           <a @click="showNext()" :disabled="!isEndPage"><%= t 'monitoring.btn.next' %>
             <span aria-hidden="true">&rarr;</span></a>
