--- a/app/views/vue/_servertest_results_tabpane.html.erb
+++ b/app/views/vue/_servertest_results_tabpane.html.erb
@@ -36,7 +36,7 @@
           <a @click="showPrev()"><span aria-hidden="true">&larr; <%= t 'monitoring.btn.prev' %></span></a></li>
         <label><%= t 'monitoring.msg.page' %>:
           &nbsp </label><strong v-html="pageNumber + 1"></strong> <%= t 'monitoring.msg.of' %>
-        &nbsp<span v-html="data.length / pages  | roundup"></span>
+        &nbsp<span v-html="roundup(data.length / pages)"></span>
         <li :class="{disabled: isEndPage}">
           <a @click="showNext()" :disabled="!isEndPage"></span><%= t 'monitoring.btn.next' %>
             <span aria-hidden="true">&rarr;</span></a></li>
