--- a/app/views/users_admin/index.html.erb
+++ b/app/views/users_admin/index.html.erb
@@ -7,7 +7,7 @@
 
 <div id="indexElement">
   <div class="input-group">
-    <input type="text" name="query" v-model="searchQuery" debounce="500" class="form-control" placeholder="<%= t 'users.search' %>">
+    <input type="text" name="query" v-model="searchQuery" class="form-control" placeholder="<%= t 'users.search' %>">
     <hr>
   </div>
 
