--- a/app/views/infrastructures/_show.html.erb
+++ b/app/views/infrastructures/_show.html.erb
@@ -141,24 +141,24 @@
               </div>
 
               <div v-show="!loading">
-                <add-modify-tabpane         v-if="tabpane_active('add_modify')"         :templates.once="current_infra.templates" :result.sync="current_infra.add_modify"></add-modify-tabpane>
-                <insert-cf-params           v-if="tabpane_active('insert-cf-params')"   :infra_id.once="current_infra.id"></insert-cf-params>
-                <add-ec2-tabpane            v-if="tabpane_active('add-ec2')"            :infra_id.once="current_infra.id"></add-ec2-tabpane>
-                <cf-history-tabpane         v-if="tabpane_active('cf_history')"         :infra_id.once="current_infra.id"></cf-history-tabpane>
-                <stack-events-table         v-if="tabpane_active('event_logs')"         :events.once="current_infra.events" :enable_sort="true"></stack-events-table>
-                <security-groups-tabpane    v-if="tabpane_active('security_groups')"    :infra_id.once="current_infra.id" :ec2_instances.once="current_infra.resources.ec2_instances"></security-groups-tabpane>
-                <monitoring-tabpane         v-if="tabpane_active('monitoring')"         :infra_id.once="current_infra.id"></monitoring-tabpane>
-                <edit-monitoring-tabpane    v-if="tabpane_active('edit-monitoring')"    :infra_id.once="current_infra.id"></edit-monitoring-tabpane>
-                <infra-logs-tabpane         v-if="tabpane_active('infra_logs')"         :infra_id.once="current_infra.id"></infra-logs-tabpane>
-                <ec2-tabpane                v-if="tabpane_active('ec2')"                :infra_id.once="current_infra.id" :physical_id.once="tabpaneGroupID"></ec2-tabpane>
-                <rds-tabpane                v-if="tabpane_active('rds')"                :infra_id.once="current_infra.id" :physical_id.once="tabpaneGroupID"></rds-tabpane>
-                <elb-tabpane                v-if="tabpane_active('elb')"                :infra_id.once="current_infra.id" :physical_id.once="tabpaneGroupID"></elb-tabpane>
-                <s3-tabpane                 v-if="tabpane_active('s3')"                 :infra_id.once="current_infra.id" :physical_id.once="tabpaneGroupID"></s3-tabpane>
-                <serverspec-tabpane         v-if="tabpane_active('serverspec')"         :infra_id.once="current_infra.id" ></serverspec-tabpane>
-                <servertest-results-tabpane v-if="tabpane_active('serverspec_results')" :infra_id.once="current_infra.id" :columns.once="spec_Columns" :physical_id="tabpaneGroupID"   ></servertest-results-tabpane>
-                <operation-sched-tabpane    v-if="tabpane_active('operation-sched')"    :infra_id.once="current_infra.id" :columns.once="ops_sched_Columns" :resources="resources"></operation-sched-tabpane>
-                <view-rules-tabpane         v-if="tabpane_active('view-rules')"         :infra_id.once="current_infra.id" :security_groups.once="sec_group" :physical_id.once="tabpaneGroupID" :instance_type.once="instance_type"></view-rules-tabpane>
-                <edit-ansible-playbook-tabpane       v-if="tabpane_active('edit_ansible_playbook')"       :infra_id.once="current_infra.id" ></edit-ansible-playbook-tabpane>
+                <add-modify-tabpane         v-if="tabpane_active('add_modify')"         :templates="current_infra.templates" :result="current_infra.add_modify"></add-modify-tabpane>
+                <insert-cf-params           v-if="tabpane_active('insert-cf-params')"   :infra_id="current_infra.id"></insert-cf-params>
+                <add-ec2-tabpane            v-if="tabpane_active('add-ec2')"            :infra_id="current_infra.id"></add-ec2-tabpane>
+                <cf-history-tabpane         v-if="tabpane_active('cf_history')"         :infra_id="current_infra.id"></cf-history-tabpane>
+                <stack-events-table         v-if="tabpane_active('event_logs')"         :events="current_infra.events" :enable_sort="true"></stack-events-table>
+                <security-groups-tabpane    v-if="tabpane_active('security_groups')"    :infra_id="current_infra.id" :ec2_instances="current_infra.resources.ec2_instances"></security-groups-tabpane>
+                <monitoring-tabpane         v-if="tabpane_active('monitoring')"         :infra_id="current_infra.id"></monitoring-tabpane>
+                <edit-monitoring-tabpane    v-if="tabpane_active('edit-monitoring')"    :infra_id="current_infra.id"></edit-monitoring-tabpane>
+                <infra-logs-tabpane         v-if="tabpane_active('infra_logs')"         :infra_id="current_infra.id"></infra-logs-tabpane>
+                <ec2-tabpane                v-if="tabpane_active('ec2')"                :infra_id="current_infra.id" :physical_id="tabpaneGroupID"></ec2-tabpane>
+                <rds-tabpane                v-if="tabpane_active('rds')"                :infra_id="current_infra.id" :physical_id="tabpaneGroupID"></rds-tabpane>
+                <elb-tabpane                v-if="tabpane_active('elb')"                :infra_id="current_infra.id" :physical_id="tabpaneGroupID"></elb-tabpane>
+                <s3-tabpane                 v-if="tabpane_active('s3')"                 :infra_id="current_infra.id" :physical_id="tabpaneGroupID"></s3-tabpane>
+                <serverspec-tabpane         v-if="tabpane_active('serverspec')"         :infra_id="current_infra.id" ></serverspec-tabpane>
+                <servertest-results-tabpane v-if="tabpane_active('serverspec_results')" :infra_id="current_infra.id" :columns="spec_Columns" :physical_id="tabpaneGroupID"   ></servertest-results-tabpane>
+                <operation-sched-tabpane    v-if="tabpane_active('operation-sched')"    :infra_id="current_infra.id" :columns="ops_sched_Columns" :resources="resources"></operation-sched-tabpane>
+                <view-rules-tabpane         v-if="tabpane_active('view-rules')"         :infra_id="current_infra.id" :security_groups="sec_group" :physical_id="tabpaneGroupID" :instance_type="instance_type"></view-rules-tabpane>
+                <edit-ansible-playbook-tabpane       v-if="tabpane_active('edit_ansible_playbook')"       :infra_id="current_infra.id" ></edit-ansible-playbook-tabpane>
               </div>
             </div>
           </div>
