--- a/app/views/key_pairs/index.html.erb
+++ b/app/views/key_pairs/index.html.erb
@@ -19,7 +19,7 @@
         <div class="list-group">
           <a href="#" @click="switch_region(region.name)" v-for="region in regions" :class="{active: region.selected, disabled: has_no_key_pairs(region.name)}" class="list-group-item">
             {{region.name}}
-            <span class="badge" v-text="number_of_key_pairs(region.name) | zero_as_blank"></span>
+            <span class="badge" v-text="zero_as_blank(number_of_key_pairs(region.name))"></span>
           </a>
         </div>
       </div>
