--- a/app/views/servertests/awspec_generator.html.erb
+++ b/app/views/servertests/awspec_generator.html.erb
@@ -39,7 +39,7 @@
       <div class="form-group" v-if="awspec.value && !generating">
           <label class="control-label col-sm-2" for="infras"><%=t('servertests.msg.generated')%></label>
           <div class="col-sm-8">
-            <textarea  v-ace="awspec.value"></textarea>
+            <textarea  v-model="awspec.value" id="awspec_generator_value"></textarea>
           </div>
       </div>
       <div class="form-group" v-if="awspec.value && !generating">
