Fix: CFテンプレートの作成画面のタイトルを修正

--- a/app/views/cf_templates/new.html.erb
+++ b/app/views/cf_templates/new.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, I18n.t('clients.client')+" | "+I18n.t('helpers.titles.new') ) %>
+<% provide(:title, I18n.t('cf_templates.cf_template')+" | "+I18n.t('helpers.titles.new') ) %>
 <div class="page-header">
   <h1><%= t('helpers.titles.new') %></h1>
 </div>
