Fix: コマンドのログがリアルタイムに表示される画面で、どんなオペレーションでもcookと表示されている不具合の修正

--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -325,7 +325,7 @@
   <%# Cook in-progress console %>
   <div class="col-xs-12" v-if="inprogress">
     <div class="form-actions-top">
-      <div-loader text="<%= t 'nodes.msg.cooking'%>"></div-loader>
+      <div-loader text="<%= t 'nodes.msg.executing'%>"></div-loader>
     </div>
     <div>
       <%# わざと一行で書いてます %>
